# b-package

./: 404.html  README.md  RELEASE.md  index.html  pyproject.toml  sitemap.xml
b-package/: mkdocs.yml
b-package/docs/: changelog.md  introduction.md
b-package/docs/rscript/: rscript.ipynb
b-package/docs/stylesheets/: style.css
b-package/docs/vscoder/: vscoder.ipynb
b-package/scripts/: utils.R
b-package/site/: index.html  search.html  sitemap.xml
b-package/site/changelog/: index.html
b-package/site/introduction/: index.html
b-package/site/rscript/rscript/: index.html
b-package/site/search/: search_index.json
b-package/site/vscoder/vscoder/: index.html
changelog/: index.html
introduction/: index.html
rscript/rscript/: index.html
search/: search_index.json
stylesheets/: style.css
tests/: test_b_package.py
vscoder/vscoder/: index.html
