[tool.poetry]
name = "b-package"
version = "0.1.0"
description = ""
authors = ["brunofariadf <brunofariadf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.3.1"
pymdown-extensions = "^9.5"
mkdocs-windmill = "^1.0.5"
mkdocs-jupyter = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
